<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.IntroActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/intro_bg"/>

    <View
        android:id="@+id/rectangle_3"
        android:layout_width="match_parent"
        android:layout_height="496dp"
        android:background="@drawable/rectangle_gradient_intropage"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/get_started"
        android:textSize="@dimen/btn_text"
        android:textColor="@color/white"
        android:background="@drawable/button_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="60dp"
        android:layout_marginHorizontal="40dp"/>

    <TextView
        android:id="@+id/tv_des"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/de_chef_is_"
        android:textColor="@color/white"
        android:textSize="@dimen/des_text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/btn_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="70dp"
        android:layout_marginHorizontal="69dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cook_like_a"
        android:textSize="@dimen/heading_text"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/tv_des"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="17dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>