<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/discover_be"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="71dp"
        android:text="@string/discover_be"
        android:textStyle="bold"
        android:textSize="@dimen/heading_medium_text"
        android:textColor="@color/shadeOfTeal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_search"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_search_24"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/search_here"
        android:inputType="text"
        android:padding="8dp"
        android:textColorHint="#6D6B6B"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/discover_be"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_trending_re"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trending_re"
        android:textSize="@dimen/title_text"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@id/editText_search"
        app:layout_constraintStart_toStartOf="@id/editText_search"/>

    <ProgressBar
        android:id="@+id/progress_trendRec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_trending_re"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="4dp"
        android:indeterminateTint="@color/black"
        android:visibility="visible"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trendRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        tools:listitem="@layout/meal_item_layout"
        android:layout_marginTop="21dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_trending_re" />

</androidx.constraintlayout.widget.ConstraintLayout>